@@ -8,6 +8,7 @@ Release 0.6.6
 * more robust whitening for large arrays with numerous overlaps
 * add an experimental mode to refine coreset (isolated spikes)
 * put merging units in Hz^2 in the merging GUI
+* add a compression mode to greatly reduce disk usage for very large probe
 
 =============
 Release 0.6.5
